# hector_bag_tools

./: CMakeLists.txt  README.md  package.xml
scripts/: merge_tf_static.py  split_bag
